PLD-COMP-RENDU/pld-comp/tests/ifcc-test-output/testfiles-test-erreurs-25_erreur_semi_comma/gcc-compile.txt
input.c:4:22: error: expected ';' at end of declaration
    int var2 = var2/3
                     ^
                     ;
1 error generated.

return code: 1
